# Study2024-2025

./: 202404.py  202503A.py  2025A-ros.ipynb  BuggyControlPublisher.py  CSV2Dash.py  CostReduction.py  EnvInfodata01.csv  Env_data.csv  EnvironmentGraph.py  EnvironmentGraph2.py  EnvironmentGraph2A.py  EnvironmentGraph3A.py  ErrorMemo  Flasktest1.py  MHZ19B＋BME680_v1a.py  MHZ19B＋BME680_v2a.py  MHZ19B＋BME680_v3a.py  MHZ19B＋BME680_v3b-simple.py  PCF8574.py  PaspPi Lesson8VibrationPin-1.py  Pico_DHTwebUpdate.py  Pico_chikafromWeb.py  PicodataX.csv  README.md  ROS_beginner.py  RaspLesson5Leaser.py  RaspPi  Lesson27Humid.py  RaspPi Lesson1.py  RaspPi Lesson10-MagnetSensor.py  RaspPi Lesson13RainSensor.py  RaspPi Lesson17ThermoMtr1.py  RaspPi Lesson6Button.py  RaspPi Lesson9-2Buzzer2.py  RaspPiLesson4Relay.py  RaspPi_RGB Ctrl.py  lcd1602.py  picoLCD+TEMP.py
20250331_TEST/: ROS_beginner.py
20250430-TRY/: 20250506ROS_Sub.py  20250507ROS_pub.py  OllamaTest1.py
Artificial IntelligenceForBusiness/: AIFB_Lesson1-HW.py  AIFB_Lesson1-v2.py  AIFB_Lesson1-v3.py  AIFB_Lesson1.py  (+2 more)
LIBcurveSIM/: Curve1.py
turtle_simulation/: IMPLEMENTATION_SUMMARY.md  README.md  package.xml  setup.py  test_package_structure.py
turtle_simulation/config/: turtle.rviz
turtle_simulation/launch/: gazebo_sim.launch.py  turtle_sim.launch.py
turtle_simulation/models/: turtle.urdf
turtle_simulation/resource/: turtle_simulation
turtle_simulation/turtle_simulation/: __init__.py  gazebo_turtle_node.py  turtle_controller_node.py  turtle_keyboard_node.py
turtle_simulation/worlds/: turtle_world.world
(+313 files in other folders)
